# sunshine

./: .coveragerc  .gitignore  Procfile  README.md  Vagrantfile  apps.py  conftest.py  install  manage.py  pass.txt  populate_db.py  populatedb.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  run_coverage.sh  setup_dev.sh
.github/workflows/: ci.yml
accounts/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  validators.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_disclaimercontent_options.py  0002_auto_20200724_1418.py  0003_auto_20200730_1800.py
accounts/templatetags/: accounttags.py
accounts/tests/: test_admin.py  test_forms.py  test_management.py  test_models.py  test_views.py
activitylog/: admin.py  models.py  tests.py
activitylog/migrations/: 0001_initial.py
ansible/: vault.yaml
booking/: admin.py  baker_recipes.py  context_processors.py  email_helpers.py  forms.py  gift_voucher_urls.py  models.py  mommy_recipes.py  urls.py  utils.py  widgets.py
booking/migrations/: 0001_initial.py  0002_alter_event_cancellation_fee.py  0002_auto_20160927_0639.py  0003_alter_event_paypal_email.py  0003_auto_20160927_2201.py  0004_auto_20161004_1405.py  0004_private.py  0005_auto_20190119_1800.py  0005_membershiptype_membership_and_more.py  0005_remove_event_paypal_email.py  0006_auto_20190120_1235.py  0006_basevoucher_totalvoucher_itemvoucher_and_more.py  0006_membership_alter_event_event_type_usermembership.py  0006_membershiptype_booking_invoice_and_more.py  0007_basevoucher_alter_membership_invoice_totalvoucher_and_more.py  0007_booking_stripe_pending_booking_user_membership.py  0007_event_venue.py  0007_giftvouchertype_giftvoucher.py  0008_alter_event_cancellation_period.py  0008_alter_itemvoucher_event_types_and_more.py  0008_remove_event_location.py  0008_remove_usermembership_start_date_and_more.py  0009_alter_booking_user_membership.py  0009_alter_event_cancellation_period.py  0009_alter_membershiptype_cost.py  0009_regularclass_workshop.py  0010_alter_basevoucher_discount_amount_and_more.py  0010_register.py  0011_auto_20190123_2311.py  0011_remove_booking_stripe_pending_booking_checkout_time.py  0012_auto_20200228_1500.py  0012_membershiptype_active.py  0013_auto_20200228_2014.py  0013_giftvouchertype_giftvoucher.py  0014_add_default_cancellation_fee.py  0014_alter_giftvouchertype_unique_together_and_more.py  0015_booking_date_cancelled.py  0015_giftvouchertype_override_cost.py  0016_alter_giftvouchertype_membership_type.py  0016_delete_register.py  (+4 more)
booking/templatetags/: __init__.py  bookingtags.py
booking/tests/: conftest.py  helpers.py  test_admin.py  test_ajax_views.py  test_booking_views.py  test_event_views.py  test_forms.py  test_gift_vouchers.py  test_management.py  test_membership_views.py  test_migrations.py  test_misc_views.py  test_models.py  test_shopping_basket_views.py  test_templatetags.py  test_user_invoices_views.py  test_waiting_list.py  test_widgets.py
booking/views/: __init__.py  ajax_views.py  booking_helpers.py  booking_views.py  event_views.py  gift_vouchers.py  memberships.py  misc.py  purchases.py  shopping_basket.py  user_invoices_views.py  views_utils.py  (+1 more)
dev_vagrant/: Vagrantfile
gallery/: admin.py  models.py  tests.py  urls.py  views.py
payments/: admin.py  forms.py  models.py  urls.py  views.py
polefit/: dashboard.py  dev_env  settings.py  urls.py  wsgi.py
provisioning/: playbook.yml  vault.yml
stripe_payments/: admin.py  connection_views.py  emails.py  models.py  urls.py  utils.py  views.py
studioadmin/: apps.py  forms.py  urls.py
sunshine/: custom_logging.py  dev_env  settings.py  urls.py  wsgi.py
templates/: 403_csrf.html  404.html  429.html  500.html
timetable/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
utils/: backup  deploy  make_secret_key
website/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+400 files in other folders)
