[project]
name = "sunshine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "delorean>=1.0.0",
    "dj-database-url>=3.0.1",
    "dj-static>=0.0.6",
    "django>=6.0",
    "django-allauth>=65.13.1",
    "django-bootstrap5>=25.3",
    "django-braces>=1.17.0",
    "django-classy-tags>=4.1.0",
    "django-cookie-law>=2.2.0",
    "django-crispy-forms>=2.5",
    "django-debug-toolbar>=6.1.0",
    "django-email-obfuscator>=0.1.5",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-object-actions>=5.0.0",
    "django-ses[events]>=4.6.0",
    "django-storages>=1.14.6",
    "django-suit",
    "dynamic-django-forms>=0.1.11",
    "envdir>=1.0.1",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2>=2.9.11",
    "pymemcache>=4.0.0",
    "python-dateutil>=2.9.0.post0",
    "shortuuid>=1.0.13",
    "stripe>=14.1.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "bs4>=0.0.2",
    "coverage>=7.13.1",
    "django-migration-testcase>=0.0.15",
    "ipdb>=0.13.13",
    "model-bakery>=1.21.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-env>=1.2.0",
    "pytest-freezer>=0.4.9",
    "pytest-xdist>=3.8.0",
]

[tool.uv.sources]
django-suit = { git = "https://github.com/rebkwok/django-suit.git", rev = "v2" }

[tool.pytest]
    addopts = ["--reuse-db", "-n", "auto"]
    testpaths = [
        "*/tests/*.py",
        "*/tests.py",
    ]
    DJANGO_SETTINGS_MODULE = "sunshine.settings"
    env = [
        "TESTING=1",
        "SECRET_KEY=dummy_secret",
        "EMAIL_HOST_USER=dummy_user",
        "EMAIL_HOST_PASSWORD=dummy_password",
        "LOG_FOLDER=log_folder",
        "SEND_ALL_STUDIO_EMAILS=True",
        "CACHE_BACKEND=django.core.cache.backends.locmem.LocMemCache",
        "CACHE_LOCATION=local-cache",
        "STRIPE_PUBLISHABLE_KEY=dummy",
        "STRIPE_CONNECT_CLIENT_ID=dummy",
        "STRIPE_SECRET_KEY=dummy",
        "STRIPE_ENDPOINT_SECRET=dummy",
        "INVOICE_KEY=dummy",
    ]

[tool.coverage.run]
    omit = [
        "venv/*",
        ".venv/*",
        "*/migrations/*",
        "*/tests/*",
        "*/tests.py",
        "*/wsgi.py",
        "*/__init__.py",
        "manage.py",
        "website/management/commands/ensure_superuser.py",
        "custom_logging.py",
    ]

    relative_files = true

[tool.coverage.report]
    skip_empty = true
    skip_covered = true
    fail_under = 99
